[package]
name = "goshawk"
description = "An RTS camera for bevy"
version = "0.1.1"
documentation = "https://docs.rs/goshawk"
readme = "README.md"
keywords = ["bevy", "camera", "rts", "gamedev", "3d"]
categories = ["game-development"]
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
exclude = ["example.mp4"]

[dependencies]
bevy = { version = "0.4", default-features = false }

[dev-dependencies]
itertools = "0.10.0"

[[example]]
name = "basic"
required-features = ["bevy/default"]
